# FIMA

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  test.cpp
include/commands/: ls.h  permissions.h  remove.h  rename.h  tree.h
include/commands/cloc/: cloc.h  main.h
include/commands/cloc/helpers/: count_lines.h  file_stats.h  file_stats.hpp  is_comment.h  print.h  regex.h  (+1 more)
include/commands/copy/: directory.h  file.h
include/commands/create/: directory.h  file.h
include/commands/ls/: main.h
include/commands/permissions/: main.h
include/commands/remove/: directory.h  file.h  main.h
include/commands/rename/: main.h
include/commands/tree/: main.h
include/helpers/: get_directories_entries.h  list_directories.h
include/modules/ls/: main.h
include/modules/tree/: main.h
include/tui/: main.h  tui.h
scripts/: build-run.sh  get-cli11-latest.sh  get-source-files.sh  main.sh
scripts/cmake/: files.cmake
scripts/utils/: ascii-art.txt  fix-compile_commands.sh
src/: main.cpp
src/commands/: ls.cpp  permissions.cpp  remove.cpp  rename.cpp  tree.cpp
src/commands/cloc/: cloc.cpp  main.cpp
src/commands/copy/: directory.cpp  file.cpp
src/commands/create/: directory.cpp  file.cpp
src/commands/ls/: main.cpp
src/commands/permissions/: main.cpp
src/commands/remove/: directory.cpp  file.cpp  main.cpp
src/commands/rename/: main.cpp
src/commands/tree/: main.cpp
src/helpers/: get_directories_entries.cpp  list_directories.cpp
src/modules/ls/: main.cpp
src/modules/tree/: main.cpp
src/tui/: main.cpp  tui.cpp
(+10 files in other folders)
